1. 나의 채팅방 목록 조회 수정 2. test code 수정